# fastapi

./: Makefile  README.MD  install.py  pyproject.toml
app/: main.py
app/router/: __init__.py
