[tool.poetry]
name = "python api"
version = "0.1.0"
description = "Api Python Tutorial"
authors = ["David Cordero Rosales <webdesigncuba@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
