[tool.poetry]
name = "python api"
version = "0.1.0"
description = "Api Python Tutorial"
authors = ["David Cordero Rosales <webdesigncuba@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
annotated-types="0.5.0"
anyio="3.7.1"
certifi="2023.7.22"
click="8.1.7"
colorama="0.4.6"
fastapi="0.103.1"
h11="0.14.0"
httptools="0.6.0"
idna="3.4"
pydantic="2.4.1"
pydantic_core="2.10.1"
python-dotenv="1.0.0"
PyYAML="6.0.1"
sniffio="1.3.0"
starlette="0.27.0"
typing_extensions="4.8.0"
uvicorn="0.23.2"
watchfiles="0.20.0"
websockets="11.0.3"
sqlalchemy = "^2.0.21"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
